fix of the up-jumper-arrow in smartphone (version 8)

--- a/style-mainPage.css
+++ b/style-mainPage.css
@@ -5,7 +5,10 @@ body {
     margin: 0px;
 }
 
- #arrow-link{
+#arrow-link {
+    width: 6vw;
+    height: 6vw;
+
     position: fixed;
     top: 76%;
     /* bottom: 20%; */
@@ -15,9 +18,9 @@ body {
     margin: 0;
 }
 
-#arrow{
-    width: 4vw;
-    height: 4vw;
+#arrow {
+    width: 6vw;
+    height: 6vw;
 
     position: fixed;
     top: 76%;
@@ -25,8 +28,8 @@ body {
     /* right: 93%; */
     left: 3%;
 
-    margin: 0;    
-} 
+    margin: 0;
+}
 
 #hero {
     background-image: url("src/hero/background.jpg");
@@ -288,7 +291,7 @@ a {
 
     width: 3.5vw;
     height: 3.5vw;
-    
+
 }
 
 #logo a {
@@ -325,6 +328,11 @@ a {
 
 
 @media screen and (max-width: 768px) {
+    #arrow {
+        width: 8vw;
+        height: 8vw;
+    }
+
     #logo-headline {
         width: 100vw;
         height: 20vh;
